Added action to pricing buttons to fill contact details

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="container" data-aos="zoom-out">
         <div class="container" data-aos="fade-up">
           <div class="section-header">
-            <h2>Finding a place to rent does <strong>not</strong> have to be <i><span id="word">risky</span></i></h2>
+            <h2>Finding a place to rent does <strong>not</strong> have to be <strong><span id="word">risky</span></strong></h2>
           </div>
         </div>
       </div>
@@ -128,7 +128,7 @@
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-search icon"></i></div>
               <h4>Find a property</h4>
-              <p>From the comfort of your home, find the room, studio, apartment or house you want to rent and share the link with us!</p>
+              <p>From the comfort of your home, find the room, studio, apartment or house you'd like to rent and share the link with us!</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -136,7 +136,7 @@
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-person-check icon"></i></div>
               <h4>WeVisit for you</h4>
-              <p>We will arrange a visit on your behalf, visit the property and meet the letting agency or the landlord ourselves.</p>
+              <p>We will arrange a visit, review the property and meet the letting agency/landlord on your behalf.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -144,7 +144,8 @@
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-file-earmark-check icon"></i></div>
               <h4>Get our report</h4>
-              <p>We will take pictures and  videos of the surrounding area, the outside and the inside of the property. Then, we will report to you back with our findings about the property.</p>
+              <p>We will check the inside, outside and property surroundings of the property.
+                 We will take pictures and videos and feedback to you promptly.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -152,7 +153,7 @@
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-key icon"></i></div>
               <h4>Rent it</h4>
-              <p>If you really like the property, rent it! You will pay our <a href="index.html#pricing">fees</a> when you sign the contract.</p>
+              <p>If you like it, rent it! Now you can relax. You won't have to worry about <a href="index.html#pricing">fees</a> until you've signed the contract.</p>
             </div>
           </div>
 
@@ -160,7 +161,7 @@
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-box-seam icon"></i></div>
               <h4>Move in</h4>
-              <p>Get everything ready, you have a safe place to land in London now!</p>
+              <p>Get everything ready, you've just got yourself a safe place to land in London now!</p>
             </div>
           </div>
 
@@ -207,7 +208,7 @@
                   <i class="bi bi-camera-fill"></i>
                 </div>
                 <h3>Videos and photos</h3>
-                <p>We will take pictures and videos. Some properties could look nice online but they are not telling you everything: the outside or the surroundings could make your experience in London very different.</p>
+                <p>We will take pictures and videos. Some properties could look nice online but, they are not telling you everything: the outside or the surroundings could make your experience in London very different.</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -222,7 +223,7 @@
                   <i class="bi bi-file-richtext"></i>
                 </div>
                 <h3>Report</h3>
-                <p>Let us wrap everything up. You will get real pictures and videos at the moment of the visit, and you will get all your questions answered.</p>
+                <p>Let us wrap everything up. You will get real pictures and videos from the moment of the visit, and you will get all your questions answered.</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -237,7 +238,7 @@
                   <i class="bi bi-question-lg"></i>
                 </div>
                 <h3>Questions to ask</h3>
-                <p>Let us ask the right questions, check if something is different from what it is shown online and some personal preferences: does a desk for WFH fit? is it quiet enough to study? is safe going back home at night?</p>
+                <p>Let us ask the right questions, check if something is different from what it is shown online and some personal preferences: does a desk for WFH fit? is it quiet enough to study? is it safe going back home at night?</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -267,7 +268,7 @@
                   <i class="bi bi-gem"></i>
                 </div>
                 <h3>Premium accounts</h3>
-                <p>Can not you send an inquiry about a room you saw online because you need a Premium Account like <a href="https://www.spareroom.co.uk/content/info-faq/how-the-site-works" target="_blank">Early Bird at Spare Room</a>? We have a yearly account, so we will ask them to visit the room or property on your behalf!</p>
+                <p>Unable to inquiry about a room you saw online because you need a Premium Account? Link <a href="https://www.spareroom.co.uk/content/info-faq/how-the-site-works" target="_blank">Early Bird at SpareRoom</a>? We have it for you, we will ask them to visit the room or property on your behalf!</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -309,22 +310,23 @@
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-dash"></i>
-                  <a>London renting market is very competitive, with good places having several visits a day and being rented out within their first week advertised.</a>
+                  <a>London renting market is very competitive, with good places experiencing several visits a day and being rented out within their first week advertised.</a>
                 </div>
                 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-dash"></i>
-                  <a>It is very dangerous to pay in advance for a property you have not seen yourself and to people, you have not met personally. Avoid it!</a>
+                  <a>It is very dangerous to pay in advance for a property you have not seen yourself without meeting the owners. Avoid it!</a>
                 </div>
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-dash"></i>
-                  <a>Going the safe route: Renting a hotel or Airbnb for a few weeks while you search for a long-term place to stay could be expensive, and not everyone has a relocation package!</a>
+                  <a>Taking the safest route would involve renting a hotel or Airbnb for a few weeks while you search for a long-term place to stay.
+                    This could be expensive, and not everyone has a relocation package!</a>
                 </div>
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-dash"></i>
-                  <a>You might not know the UK regulations and laws so you could have a bad deal or be in an illegal position.</a>
+                  <a>You might not know the UK regulations and laws so you could have a bad deal or be in an illegal position, like your deposit not being legally protected.</a>
                 </div>
 
                 <div class="d-flex align-items-center mt-4">
@@ -343,12 +345,12 @@
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-dash"></i>
-                  <a>You might get ignored because you're not yet in the UK to visit it.</a>
+                  <a>They might ignore you because you're not in London yet for the viewings yet.</a>
                 </div>
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-dash"></i>
-                  <a>The problem of renting a room or a flat from overseas without the possibility of visiting by yourself.</a>
+                  <a>The problem of renting a room or a flat without the possibility of visiting by yourself.</a>
                 </div>
 
                 <div class="d-flex align-items-center mt-4">
@@ -372,7 +374,7 @@
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-dash"></i>
-                  <a>We will take pictures and videos of the surrounding area and the outside and the inside of the property. Then, you will receive a report with them and with our findings.</a>
+                  <a>We will take pictures and videos of the surrounding area and the outside and the inside of the property. Then, you will receive a report our findings.</a>
                 </div>
 
                 <div class="d-flex align-items-center mt-4">
@@ -414,7 +416,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
-                  There are not many cities as expensive as London for accommodation, staying in a hotel for weeks until you manage to find your room or property to move in could get very expensive. WeVisit for you, so you can save money and land directly on your new home.
+                  There are not many cities as expensive as London for accommodation. Staying in a hotel for weeks until you manage to find your room or property to move in, could get very expensive. WeVisit for you, so you can save money and land directly on your new home.
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -422,7 +424,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
-                  Have you been shown a really nice room online, wonderful pictures and photos and asked for a deposit to secure it? Scams are on the rise, so be aware of who you trust!
+                  Have you been shown a really nice room online? wonderful pictures and photos? have you been asked for a deposit to secure it? Scams are on the rise, so be aware of who you trust!
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -430,7 +432,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
-                  Are you worried about how you will fit in the city? Not sure about your new colleagues? Worried about your first year at University? Let us take the worry of renting a place to stay so you can focus on what is really important.
+                  Are you worried about how you will fit in the city? Not sure about your new colleagues? Worried about your first year at University? Let us take the worry of renting a place so you can focus on what is really important.
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -438,7 +440,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
-                  Most landlords and agencies do not bother to reply to you if you are not yet in London so, you will not be given the chance to rent a room or property. We are locals, WeVisit the properties ourselves, they will get back to you if you tell them someone will visit it on your behalf!
+                  If you are not in London, most landlords and agencies won't get back to you so, you will not be given the chance to rent a room or property. We are locals, WeVisit the properties ourselves, they'll get back to you if you someone visits on your behalf!
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -456,7 +458,7 @@
 
         <div class="section-header">
           <h2>Our Pricing</h2>
-          <p><p>We will write down an easy contract on each visit stating the property we will visit. After receiving the report if you decide to rent it out, you will have to pay our fees.</p>
+          <p><p>We will write down an easy contract on each viewing, stating which property we will visit. If after receiving the report, you are satisfied, pay our fees and rent it.</p>
         </div>
 
         <div class="row gy-4">
@@ -543,7 +545,7 @@
 
           <div class="section-header">
             <p>
-              If you finally rent a room that we visit, you will need to pay 2.5% of the yearly amount (1-year contracts) or 2% of the annual amount (under 1-year contracts)
+              If you finally rent a room, you will need to pay 2.5% of the yearly amount (1-year contracts) or 2% of the annual amount (under 1-year contracts)
             </p>
           </div>
 
@@ -558,8 +560,8 @@
 
         <div class="section-header">
           <h2>About Us</h2>
-          <p>We are locals that have been renting in London for over a decade in many places, rooms shared accommodations, studios and entire properties from 1 to 4-bedroom houses.</p><br>
-          <p>We know how difficult it is to find the right place. With us, it does not have to be in that way.</p>
+          <p>We are experienced londoners. Renting different places for over a decade: rooms in shared accommodations, studios and entire properties from 1 to 4-bedroom houses.</p><br>
+          <p>We know how difficult it is to find the right place. With us, it does not have to be that way.</p>
         </div>
 
       </div>
@@ -603,7 +605,7 @@
                 </h3>
                 <div id="faq-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    We recommend <a href="https://www.spareroom.co.uk/" target="_blank">SpareRoom</a> for rooms in a shared property.<br> 
+                    We recommend <a href="https://www.spareroom.co.uk/" target="_blank">SpareRoom</a> for rooms in a shared properties.<br>
                     For entire properties like flats or houses, we recommend 
                     <a href="https://www.rightmove.co.uk/" target="_blank">Rightmove</a>, 
                     <a href="https://www.zoopla.co.uk/" target="_blank">Zoopla</a> and 
@@ -623,7 +625,7 @@
                   <div class="accordion-body">
                     Renting a property and paying a deposit in advance online could not end well. Most people decide to stay in a hotel or Airbnb for several weeks while finding themselves a place to rent, which could be costly in London.
                     <br>
-                    We would visit the property on your behalf, you will not need to pay for accommodation and you could do it from your own home and country. We will visit the advertised property and we will send you a report back.
+                    We would visit the property on your behalf, you will not need to pay for accommodation and you could do it from the comfort of your own home. We will visit the advertised property and we will send you a report back.
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -638,7 +640,10 @@
                 <div id="faq-content-4" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
                     <i class="bi bi-question-circle question-icon"></i>
-                    Our report will contain pictures and a video of the surroundings and the entrance, which are not often posted online. We will let you know if the property is as advertised and take pictures and photos on the day of the visit. We will also look for things for you in advance like if the bathrooms are clean, the property looks tidy or it is noisy and it is well insulated.
+                    Our report will contain pictures and a video of the surroundings and the entrance, which are not often posted online.
+                    We will let you know if the property looks like the advert. We will take pictures and photos on the day of the visit.
+                    Also, we will check things for you in advance: are the bathrooms clean? does the property look tidy?
+                    is it noisy? is it well insulated?
                   </div>
                 </div>
               </div><!-- # Faq item-->
@@ -647,7 +652,7 @@
                 <h3 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-5">
                     <i class="bi bi-question-circle question-icon"></i>
-                    How do I know you will be honest and you will not try to make us rent a property which we will not like when we arrive?
+                    How do I trust, you will not trick me into renting a place I won't like when I arrive?
                   </button>
                 </h3>
                 <div id="faq-content-5" class="accordion-collapse collapse" data-bs-parent="#faqlist">
@@ -661,15 +666,18 @@
                 <h3 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-6">
                     <i class="bi bi-question-circle question-icon"></i>
-                    Will this protect me from scams online?
+                    Will this protect me from online scams?
                   </button>
                 </h3>
                 <div id="faq-content-6" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                   <div class="accordion-body">
-                    We will not able to guarantee it 100%, but most of the scams are successful because the properties do not exist, or the landlord or letting agency is made up, etc. With locals like us, visiting the property and inspecting it, as well as meeting with the landlord or letting agency, the probabilities are much lower.
+                    We will not be able to guarantee it 100%. Most of the scams are successful because the properties
+                    do not exist, or the landlord/letting agency is fake. With locals like us, visiting/inspecting the
+                    property, as well as meeting the landlord/letting agency, the chances are much lower.
                   </div>
                 </div>
-              </div><!-- # Faq item-->
+              </div>
+              <!-- # Faq item-->
 
             </div>
 
