--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="container" data-aos="zoom-out">
         <div class="container" data-aos="fade-up">
           <div class="section-header">
-            <h2>Finding a place to rent does <strong>not</strong> have to be <strong><span id="word">risky</span></strong></h2>
+            <h2>Finding a place to rent does not have to be <span id="word">risky</span></h2>
           </div>
         </div>
       </div>
