--- a/index.html
+++ b/index.html
@@ -827,13 +827,15 @@
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <!-- Custom JS File -->
   <script src="assets/js/terms-and-conditions-includer.js"></script>
   <script src="assets/js/introduction.js"></script>
   <script src="assets/js/plans-buttons.js"></script>
+  <script src="assets/js/form.js"></script>
 
   <!-- Modal -->
   <div class="modal fade modal-xl" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
