Using minified versions of css.

--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Variables CSS Files. Uncomment your preferred color scheme -->
-  <link href="assets/css/variables.css" rel="stylesheet">
-  <!-- <link href="assets/css/variables-blue.css" rel="stylesheet"> -->
-  <link href="assets/css/variables-green.css" rel="stylesheet">
-  <!-- <link href="assets/css/variables-orange.css" rel="stylesheet"> -->
-  <!-- <link href="assets/css/variables-purple.css" rel="stylesheet"> -->
-  <!-- <link href="assets/css/variables-red.css" rel="stylesheet"> -->
-  <!-- <link href="assets/css/variables-pink.css" rel="stylesheet"> -->
+  <link href="assets/css/variables.min.css" rel="stylesheet">
+  <!-- <link href="assets/css/variables-blue.min.css" rel="stylesheet"> -->
+  <link href="assets/css/variables-green.min.css" rel="stylesheet">
+  <!-- <link href="assets/css/variables-orange.min.css" rel="stylesheet"> -->
+  <!-- <link href="assets/css/variables-purple.min.css" rel="stylesheet"> -->
+  <!-- <link href="assets/css/variables-red.min.css" rel="stylesheet"> -->
+  <!-- <link href="assets/css/variables-pink.min.css" rel="stylesheet"> -->
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/main.min.css" rel="stylesheet">
 
   <!-- Floating Whatsapp Icon -->
-  <link href="assets/css/floating-icons.css" rel="stylesheet">
+  <link href="assets/css/floating-icons.min.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/add9537e54.js" crossorigin="anonymous"></script>
 </head>
 
@@ -829,13 +829,13 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="assets/js/main.min.js"></script>
 
   <!-- Custom JS File -->
-  <script src="assets/js/terms-and-conditions-includer.js"></script>
-  <script src="assets/js/introduction.js"></script>
-  <script src="assets/js/plans-buttons.js"></script>
-  <script src="assets/js/form.js"></script>
+  <script src="assets/js/terms-and-conditions-includer.min.js"></script>
+  <script src="assets/js/introduction.min.js"></script>
+  <script src="assets/js/plans-buttons.min.js"></script>
+  <script src="assets/js/form.min.js"></script>
 
   <!-- Modal -->
   <div class="modal fade modal-xl" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
