Reducing the number of js files to load

--- a/index-base.html
+++ b/index-base.html
@@ -783,7 +783,7 @@
 
           <div class="col-lg-2 col-md-6 footer-links">
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a data-bs-toggle="modal" data-bs-target="#exampleModal"  onclick="includeHTML()">Terms and Conditions</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a data-bs-toggle="modal" data-bs-target="#exampleModal"  onclick="includeTermsAndConditions()">Terms and Conditions</a></li>
               <!-- <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li> -->
             </ul>
           </div>
@@ -832,10 +832,7 @@
   <script src="assets/js/main.min.js"></script>
 
   <!-- Custom JS File -->
-  <script src="assets/js/terms-and-conditions-includer.min.js"></script>
-  <script src="assets/js/introduction.min.js"></script>
-  <script src="assets/js/plans-buttons.min.js"></script>
-  <script src="assets/js/form.min.js"></script>
+  <script src="assets/js/custom-scripts.min.js"></script>
 
   <!-- Modal -->
   <div class="modal fade modal-xl" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
