--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/services-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/services-1.jpg" class="img-fluid" alt="Property visit" loading="lazy">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -202,7 +202,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/services-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/services-2.jpg" class="img-fluid" alt="Videos and photos" loading="lazy">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -217,7 +217,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/services-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/services-3.jpg" class="img-fluid" alt="Report" loading="lazy">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -232,7 +232,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="500">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/services-4.jpg" class="img-fluid" alt="">
+                <img src="assets/img/services-4.jpg" class="img-fluid" alt="Questions to ask" loading="lazy">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -247,7 +247,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="600">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/services-5.jpg" class="img-fluid" alt="">
+                <img src="assets/img/services-5.jpg" class="img-fluid" alt="Advice" loading="lazy">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -262,7 +262,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="700">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/services-6.jpg" class="img-fluid" alt="">
+                <img src="assets/img/services-6.jpg" class="img-fluid" alt="Premium accounts" loading="lazy">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -291,7 +291,7 @@
 
           <div class="col-lg-5">
             <div class="about-img">
-              <img src="assets/img/why-us.jpg" class="img-fluid" alt="">
+              <img src="assets/img/why-us.jpg" class="img-fluid" alt="why us" loading="lazy">
             </div>
           </div>
 
