--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
       <div>
         <!-- Floating Button -->
         <a href="https://api.whatsapp.com/send?phone=+447752393031&text=Hello, would you do a visit on my behalf?" class="floating-whatsapp" target="_blank">
-          <i class="fa-brands fa-whatsapp float-button"></i>
+          <i class="bi bi-whatsapp float-button"></i>
         </a>
         <a href="https://m.me/wevisituk" class="floating-fb" target="_blank">
-          <i class="fa-brands fa-facebook-messenger float-button"></i>
+          <i class="bi bi-messenger float-button"></i>
         </a>
         <a href="https://www.instagram.com/wevisituk/" class="floating-ig" target="_blank">
-          <i class="fa fa-instagram float-button"></i>
+          <i class="bi bi-instagram float-button"></i>
         </a>
         <!-- End of Floating Button -->
       </div>
@@ -834,7 +834,6 @@
 
   <!-- Custom JS File -->
   <script src="assets/js/custom-scripts.min.js"></script>
-  <script src="https://kit.fontawesome.com/add9537e54.js" crossorigin="anonymous"></script>
 
   <!-- Modal -->
   <div class="modal fade modal-xl" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
