--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>WeVisit</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta name="description" content="WeVisit will allow you to find rooms and properties on your behalf and report you back! Rent with confidence from home 🏡">
+  <meta name="keywords" content="room in london, rent a room, rent, london, renting, room, spare room, spareroom, spare rooms, openrent, rightmove, zoopla, visit, viewing, visiting, letting agency, let, letting">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -37,7 +37,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/main.min.css" rel="stylesheet">
 
-  <!-- Floating Whatsapp Icon -->
+  <!-- Floating Icons -->
   <link href="assets/css/floating-icons.min.css" rel="stylesheet">
 
   <!-- Google tag (gtag.js) - Google Analytics -->
