Using minified css for floating icons and main.

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
   <!-- <link href="assets/css/variables-pink.css" rel="stylesheet"> -->
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/main.min.css" rel="stylesheet">
 
   <!-- Floating Whatsapp Icon -->
-  <link href="assets/css/floating-icons.css" rel="stylesheet">
+  <link href="assets/css/floating-icons.min.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/add9537e54.js" crossorigin="anonymous"></script>
 </head>
 
