--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
   <section id="hero-animated" class="hero-animated d-flex align-items-center">
     <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative" data-aos="zoom-out">
-      <img src="assets/img/icon.png" class="img-fluid">
+      <img src="assets/img/icon.png" class="img-fluid" alt="wevisit icon">
       <p></p>
       <h2>Welcome to <span>WeVisit</span></h2>
       <p>Find Check Rent</p>
