--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/services-1.jpg" class="img-fluid" alt="Property visit" loading="lazy">
+                <img src="assets/img/services-1.webp" class="img-fluid" alt="Property visit" loading="lazy">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -206,7 +206,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/services-2.jpg" class="img-fluid" alt="Videos and photos" loading="lazy">
+                <img src="assets/img/services-2.webp" class="img-fluid" alt="Videos and photos" loading="lazy">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -221,7 +221,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/services-3.jpg" class="img-fluid" alt="Report" loading="lazy">
+                <img src="assets/img/services-3.webp" class="img-fluid" alt="Report" loading="lazy">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -236,7 +236,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="500">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/services-4.jpg" class="img-fluid" alt="Questions to ask" loading="lazy">
+                <img src="assets/img/services-4.webp" class="img-fluid" alt="Questions to ask" loading="lazy">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -251,7 +251,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="600">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/services-5.jpg" class="img-fluid" alt="Advice" loading="lazy">
+                <img src="assets/img/services-5.webp" class="img-fluid" alt="Advice" loading="lazy">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -266,7 +266,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="700">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/services-6.jpg" class="img-fluid" alt="Premium accounts" loading="lazy">
+                <img src="assets/img/services-6.webp" class="img-fluid" alt="Premium accounts" loading="lazy">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -295,7 +295,7 @@
 
           <div class="col-lg-5">
             <div class="about-img">
-              <img src="assets/img/why-us.jpg" class="img-fluid" alt="why us" loading="lazy">
+              <img src="assets/img/why-us.webp" class="img-fluid" alt="why us" loading="lazy">
             </div>
           </div>
 
