No more minified. Cloudfare minify them!

--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Variables CSS Files. Uncomment your preferred color scheme -->
-  <link href="assets/css/variables.min.css" rel="stylesheet">
-  <!-- <link href="assets/css/variables-blue.min.css" rel="stylesheet"> -->
-  <link href="assets/css/variables-green.min.css" rel="stylesheet">
-  <!-- <link href="assets/css/variables-orange.min.css" rel="stylesheet"> -->
-  <!-- <link href="assets/css/variables-purple.min.css" rel="stylesheet"> -->
-  <!-- <link href="assets/css/variables-red.min.css" rel="stylesheet"> -->
-  <!-- <link href="assets/css/variables-pink.min.css" rel="stylesheet"> -->
+  <link href="assets/css/variables.css" rel="stylesheet">
+  <!-- <link href="assets/css/variables-blue.css" rel="stylesheet"> -->
+  <link href="assets/css/variables-green.css" rel="stylesheet">
+  <!-- <link href="assets/css/variables-orange.css" rel="stylesheet"> -->
+  <!-- <link href="assets/css/variables-purple.css" rel="stylesheet"> -->
+  <!-- <link href="assets/css/variables-red.css" rel="stylesheet"> -->
+  <!-- <link href="assets/css/variables-pink.css" rel="stylesheet"> -->
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/main.min.css" rel="stylesheet">
+  <link href="assets/css/main.css" rel="stylesheet">
 
   <!-- Floating Icons -->
-  <link href="assets/css/floating-icons.min.css" rel="stylesheet">
+  <link href="assets/css/floating-icons.css" rel="stylesheet">
 
   <!-- Google tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-238458346-1">
@@ -828,10 +828,10 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.min.js"></script>
+  <script src="assets/js/main.js"></script>
 
   <!-- Custom JS File -->
-  <script src="assets/js/custom-scripts.min.js"></script>
+  <script src="assets/js/custom-scripts.js"></script>
 
   <!-- Modal -->
   <div class="modal fade modal-xl" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
