Optimizing images and css

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta name="keywords" content="room in london, rent a room, rent, london, renting, room, spare room, spareroom, spare rooms, openrent, rightmove, zoopla, visit, viewing, visiting, letting agency, let, letting">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.webp" rel="icon">
+  <link href="assets/img/apple-touch-icon.webp" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +26,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Variables CSS Files. Uncomment your preferred color scheme -->
-  <link href="assets/css/variables.css" rel="stylesheet">
+  <!-- <link href="assets/css/variables.css" rel="stylesheet"> -->
   <!-- <link href="assets/css/variables-blue.css" rel="stylesheet"> -->
   <link href="assets/css/variables-green.css" rel="stylesheet">
   <!-- <link href="assets/css/variables-orange.css" rel="stylesheet"> -->
@@ -97,7 +97,7 @@
 
   <section id="hero-animated" class="hero-animated d-flex align-items-center">
     <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative" data-aos="zoom-out">
-      <img src="assets/img/icon.png" class="img-fluid" alt="wevisit icon">
+      <img src="assets/img/icon.webp" class="img-fluid" alt="wevisit icon">
       <p></p>
       <h2>Welcome to <span>WeVisit</span></h2>
       <p>Find Check Rent</p>
