Updating email address

--- a/index.html
+++ b/index.html
@@ -709,12 +709,12 @@
               <p>Feel free to contact us by email or whatsapp and we will be sure to get back to you as soon as possible.</p>
 
               <div class="info-item d-flex">
-                <a href="mailto:wevisituk@gmail.com" target="_blank">
+                <a href="mailto:info@wevisit.uk" target="_blank">
                   <i class="bi bi-envelope flex-shrink-0"></i>
                 </a>
                 <div>
                   <h4>Email:</h4>
-                  <p>wevisituk@gmail.com</p>
+                  <p>info@wevisit.uk</p>
                 </div>
               </div><!-- End Info Item -->
 
