--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -1390,7 +1390,7 @@ mso-themetint:166;"><bdt class="statement-end-if-in-editor"></bdt></span></span>
             <div class="MsoNormal" data-custom-class="body_text" style="line-height: 1.5;"><span
                     style="font-size: 15px; line-height: 115%; font-family: Arial; color: rgb(89, 89, 89);"><bdt
                     class="block-container question question-in-editor" data-id="fdc2b5b8-c95f-244b-23a7-287f82541348"
-                    data-type="question"><strong>wevisituk@gmail.com</strong></bdt></span></div>
+                    data-type="question"><strong>info@wevisit.uk</strong></bdt></span></div>
         </div>
         <style>
             ul {
